# cpp-middle-tasks

./: .gitignore  CMakeLists.txt  README.md
2_Templates/: main.cpp
2_Templates/include/: 1_is_equal.h  2_error_value.h
4_Ranges_Views/: main.cpp
6_Multithreading_Parallelism/: CMakeLists.txt  main.cpp
6_Multithreading_Parallelism/include/: parallel_min.h
6_Multithreading_Parallelism/src/: parallel_min.cpp
